--- a/S3/Addition_in_NN_with_MNIST.ipynb
+++ b/S3/Addition_in_NN_with_MNIST.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOkIOSwanP3RXQ+Va5xugoK",
+      "authorship_tag": "ABX9TyMDis6h/ghUqHk0fss+GRG7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
         "\n",
         "The given problem demands to create a custom dataset.\n",
         "\n",
-        "For this ...."
+        "For this refer to [github readme](https://github.com/namanphy/END2/blob/main/S3/readme.md)\n"
       ]
     },
     {
@@ -505,12 +505,10 @@
         "    for batch_idx, (data, target) in enumerate(pbar):\n",
         "        image, number, target = data[0].to(device), data[1].to(device), target.to(device)\n",
         "        optimizer.zero_grad()\n",
-        "\n",
         "        output = model(image, number)  # Passing batch\n",
-        "        # print('output: ', output)\n",
-        "        # print('target', target)\n",
+        "\n",
         "        loss = F.nll_loss(output, target)  # Calculate Loss\n",
-        "        # print('loss: ', loss)\n",
+        "\n",
         "        # Gradient calculation and weight update\n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
@@ -526,11 +524,10 @@
         "        for data, target in test_loader:\n",
         "            image, number, target = data[0].to(device), data[1].to(device), target.to(device)\n",
         "            output = model(image, number)\n",
-        "            # print('output: ', output)\n",
+        "\n",
         "            test_loss += F.nll_loss(output, target, reduction='sum').item()  # sum up batch loss\n",
+        "\n",
         "            pred = output.argmax(dim=1, keepdim=True)  # get the index of the max log-probability\n",
-        "            # print('pred: ', pred)\n",
-        "            # print('target', target)\n",
         "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
         "\n",
         "    test_loss /= len(test_loader.dataset)\n",
@@ -541,60 +538,6 @@
       ],
       "execution_count": 80,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8tuskzsdYnRU",
-        "outputId": "f435a5ce-217c-42a3-b6f0-459246f2891c"
-      },
-      "source": [
-        "data, target = next(iter(train_loader))\n",
-        "print(data[0].size(), data[1].size(), target.size())"
-      ],
-      "execution_count": 81,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "torch.Size([128, 1, 28, 28]) torch.Size([128, 10]) torch.Size([128])\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "11UVBvvnbxVw",
-        "outputId": "c49c747c-437c-412c-c7eb-f6c65b5946bd"
-      },
-      "source": [
-        "data[1].dtype\n",
-        "data[0].dtype\n",
-        "target.dtype"
-      ],
-      "execution_count": 87,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 87
-        }
-      ]
     },
     {
       "cell_type": "code",
