--- a/S4/Basic_LSTM_sentiment_analysis.ipynb
+++ b/S4/Basic_LSTM_sentiment_analysis.ipynb
@@ -319,7 +319,10 @@
         "id": "Ht-snY84fM0J"
       },
       "source": [
-        "## Building Model"
+        "## Building Model\n",
+        "\n",
+        "\n",
+        "### Using LSTM's hidden state to pass through FC for final output."
       ]
     },
     {
@@ -340,7 +343,11 @@
         "        # self.rnn = nn.RNN(embedding_dim, hidden_dim)\n",
         "        self.lstm = nn.LSTM(embedding_dim, hidden_dim)\n",
         "        \n",
-        "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
+        "        self.fc1 = nn.Sequential(\n",
+        "            nn.Linear(hidden_dim, 128),\n",
+        "            nn.ReLU()\n",
+        "        )\n",
+        "        self.fc2 = nn.Linear(128, output_dim)\n",
         "        \n",
         "    def forward(self, text):\n",
         "\n",
@@ -360,9 +367,9 @@
         "        # print(hidden)\n",
         "\n",
         "        assert torch.equal(output[-1,:,:], hidden.squeeze(0))\n",
-        "        return self.fc(hidden.squeeze(0))"
+        "        return self.fc2(self.fc1(hidden.squeeze(0)))"
       ],
-      "execution_count": 66,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -380,7 +387,7 @@
         "# Model Instantiation\n",
         "model = RNN(INPUT_DIM, EMBEDDING_DIM, HIDDEN_DIM, OUTPUT_DIM)"
       ],
-      "execution_count": 67,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -390,7 +397,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VdGb8dKBEO2x",
-        "outputId": "5413c832-573d-42a0-982d-7498fc776693"
+        "outputId": "23e8ca6f-db04-400e-aed5-ecb878e01eb8"
       },
       "source": [
         "def count_parameters(model):\n",
@@ -398,12 +405,12 @@
         "\n",
         "print(f'The model has {count_parameters(model):,} trainable parameters')"
       ],
-      "execution_count": 48,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The model has 2,867,049 trainable parameters\n"
+            "The model has 2,899,817 trainable parameters\n"
           ],
           "name": "stdout"
         }
@@ -419,7 +426,7 @@
         "\n",
         "optimizer = optim.SGD(model.parameters(), lr=1e-3)"
       ],
-      "execution_count": 49,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -430,7 +437,7 @@
       "source": [
         "criterion = nn.BCEWithLogitsLoss()"
       ],
-      "execution_count": 50,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -442,7 +449,7 @@
         "model = model.to(device)\n",
         "criterion = criterion.to(device)"
       ],
-      "execution_count": 68,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -564,7 +571,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yJ5KZmM4EZXW",
-        "outputId": "58dc75bb-eddb-46d2-c55c-e2d4872017d6"
+        "outputId": "83bad897-8113-487e-fd5b-2250d92903c0"
       },
       "source": [
         "N_EPOCHS = 5\n",
@@ -590,26 +597,26 @@
         "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
         "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
       ],
-      "execution_count": 69,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch: 01 | Epoch Time: 0m 26s\n",
-            "\tTrain Loss: 0.693 | Train Acc: 49.49%\n",
-            "\t Val. Loss: 0.694 |  Val. Acc: 50.06%\n",
+            "Epoch: 01 | Epoch Time: 0m 25s\n",
+            "\tTrain Loss: 0.693 | Train Acc: 50.36%\n",
+            "\t Val. Loss: 0.693 |  Val. Acc: 49.63%\n",
             "Epoch: 02 | Epoch Time: 0m 26s\n",
-            "\tTrain Loss: 0.693 | Train Acc: 49.59%\n",
-            "\t Val. Loss: 0.694 |  Val. Acc: 50.06%\n",
-            "Epoch: 03 | Epoch Time: 0m 25s\n",
-            "\tTrain Loss: 0.693 | Train Acc: 49.61%\n",
-            "\t Val. Loss: 0.694 |  Val. Acc: 50.06%\n",
-            "Epoch: 04 | Epoch Time: 0m 25s\n",
-            "\tTrain Loss: 0.693 | Train Acc: 49.57%\n",
-            "\t Val. Loss: 0.694 |  Val. Acc: 50.06%\n",
-            "Epoch: 05 | Epoch Time: 0m 25s\n",
-            "\tTrain Loss: 0.693 | Train Acc: 49.60%\n",
-            "\t Val. Loss: 0.694 |  Val. Acc: 50.06%\n"
+            "\tTrain Loss: 0.693 | Train Acc: 50.38%\n",
+            "\t Val. Loss: 0.693 |  Val. Acc: 49.74%\n",
+            "Epoch: 03 | Epoch Time: 0m 26s\n",
+            "\tTrain Loss: 0.693 | Train Acc: 50.34%\n",
+            "\t Val. Loss: 0.693 |  Val. Acc: 49.92%\n",
+            "Epoch: 04 | Epoch Time: 0m 26s\n",
+            "\tTrain Loss: 0.693 | Train Acc: 50.34%\n",
+            "\t Val. Loss: 0.693 |  Val. Acc: 50.07%\n",
+            "Epoch: 05 | Epoch Time: 0m 26s\n",
+            "\tTrain Loss: 0.693 | Train Acc: 50.34%\n",
+            "\t Val. Loss: 0.693 |  Val. Acc: 50.08%\n"
           ],
           "name": "stdout"
         }
@@ -637,6 +644,42 @@
           "output_type": "stream",
           "text": [
             "Test Loss: 0.698 | Test Acc: 50.29%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MySb6WXQtsZN"
+      },
+      "source": [
+        "### Better accuracy over RNN - if passing the final hidden state with two fully connected layers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gus5WAO5tmTo",
+        "outputId": "bfac16b4-706a-4f0e-9f4b-2493a90baec1"
+      },
+      "source": [
+        "model.load_state_dict(torch.load('tut1-model.pt'))\n",
+        "\n",
+        "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
+        "\n",
+        "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Loss: 0.693 | Test Acc: 52.39%\n"
           ],
           "name": "stdout"
         }
